--- a/index.html
+++ b/index.html
@@ -35,8 +35,6 @@
     <script type="text/javascript" src="js/script.js"></script>
 
     <!-- Replace "http" with "https" for external scripts -->
-    <script src="https://wm.lrswl.com/page/?s=322874"></script>
-    <script src="https://wm.lrswl.com/page/?s=322873"></script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7115244402517644"
      crossorigin="anonymous"></script>
 </head>
@@ -60,7 +58,8 @@
             <h2>关于我们</h2>
             <p>你好，我是Tim。这是我一个人通过不同的AI引擎，自动化生成的网站。</p>
             <p>旨在无时无刻提示你还有什么事情可以做，感谢你的支持！</p>
-            <a href="https://timshu.cn/" target="_blank">联系或打赏</a>
+            <a href="https://timshu.cn/" target="_self">联系或打赏</a>
+            <a href="../pages/police.html" target="_self">隐私政策和用户协议</a>
         </div>
     </div>
 </body>
