--- a/pages/NexThing_radio.html
+++ b/pages/NexThing_radio.html
@@ -9,7 +9,6 @@
     <meta name="google-adsense-account" content="ca-pub-7115244402517644">
     <title>NexThing：探索未来，下一步行动指南--电台</title>
     <link type="text/css" rel="stylesheet" href="../css/style.css"/>
-    <script src="http://wm.lrswl.com/page/s.php?s=322927&w=468&h=60"></script>
     <script>
         var _hmt = _hmt || [];
         (function() {
@@ -49,6 +48,7 @@
             <div align="center">
                 <iframe src="https://open.ximalaya.com/new-site/#index/6708/3402a8b62e4ec2be09b6fe282c13d112" width="100%" height="1280" frameborder="0"></iframe>
             </div>
+            <div class="container" align="center"><a href="../pages/things.html" class="backBtn">返回</a></div>
         </div>
     </div>
 
