--- a/pages/NexThing_weibo.html
+++ b/pages/NexThing_weibo.html
@@ -9,7 +9,6 @@
     <meta name="google-adsense-account" content="ca-pub-7115244402517644">
     <title>NexThing：探索未来，下一步行动指南，微博热榜</title>
     <link type="text/css" rel="stylesheet" href="../css/style.css"/>
-    <script src="http://wm.lrswl.com/page/s.php?s=322927&w=468&h=60"></script>
     <script>
         var _hmt = _hmt || [];
         (function() {
@@ -51,6 +50,7 @@
             <button id="load-more-btn">加载更多</button> 
             </div>
         </div>
+        <div class="container" align="center"><a href="../pages/things.html" class="backBtn">返回</a></div>
     </div>
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 <script src="../js/NexThing_toutiao.js"></script>
