--- a/pages/police.html
+++ b/pages/police.html
@@ -51,6 +51,7 @@
     <p>当您申请用户时，表示您已经同意遵守本规章。</p>
 
     <!-- 用户协议的条款 -->
+    <div class="container" align="center"><a href="../pages/things.html" class="backBtn">返回</a></div>
 </div>
 </div>
 
