--- a/pages/pomodoro_timer.html
+++ b/pages/pomodoro_timer.html
@@ -14,7 +14,6 @@
     <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
     <script src="https://www.nexthing.cc/js/share.js" defer></script>
     <script src="https://www.nexthing.cc/js/pomodoro_timer.js" defer></script>
-    <script src="http://wm.lrswl.com/page/?s=322874"></script>
     <script>
         var _hmt = _hmt || [];
         (function() {
@@ -63,6 +62,7 @@
         <button class="share-btn" onclick="shareToWeibo()">微博</button>
         </p>
         </div>
+        <div class="container" align="center"><a href="../pages/things.html" class="backBtn">返回</a></div>
         <!-- Add this div to your HTML body -->
         <div id="recordsContainer"></div>
         
