--- a/pages/seniorthing.html
+++ b/pages/seniorthing.html
@@ -29,7 +29,6 @@
      <script async custom-element="amp-auto-ads"
         src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
 </script>
-<script src="http://wm.lrswl.com/page/?s=322874"></script>
 <script>
     var _hmt = _hmt || [];
     (function() {
@@ -82,9 +81,9 @@
       <div class="container">
         <h1>明日日程</h1>
         <p>订阅明日日程：只需要将该链接复制到日历软件中订阅即可随时查阅新的日程。</p>
-        <a><p id="calendarLink"></p></a>
-            
+        <a><p id="calendarLink"></p></a>      
       </div>
+      <div class="container" align="center"><a href="../pages/things.html" class="backBtn">返回</a></div>
     </div>  
 </body>  
 </html>
