--- a/pages/yiyan.html
+++ b/pages/yiyan.html
@@ -63,6 +63,7 @@
             <div id="chat-box" class="dialog-container"></div>  
             <textarea id="user-input" placeholder="我当前时间做什么好？请直接说出你的建议。。。" rows="4"></textarea>  
             <button onclick="sendMessage()">发送</button>  
+            <div class="container" align="center"><a href="../pages/things.html" class="backBtn">返回</a></div>
         </div>  
     </div>  
     <script>  
